# app/user/internal/server/http.go
@@ -1,19 +1,20 @@
 package server
 
 import (
+	userv1 "github.com/tmjwjx/supermarket/api/user/v1"
+	"github.com/tmjwjx/supermarket/app/user/internal/conf"
+	usersvc "github.com/tmjwjx/supermarket/app/user/internal/service/user"
+
 	"github.com/go-kratos/kratos/v3/middleware/recovery"
 	"github.com/go-kratos/kratos/v3/middleware/validate"
 	"github.com/go-kratos/kratos/v3/transport/http"
-	v1 "github.com/tmjwjx/supermarket/api/todo/v1"
-	"github.com/tmjwjx/supermarket/app/user/internal/conf"
-	"github.com/tmjwjx/supermarket/app/user/internal/service"
 
 	"go.einride.tech/aip/fieldbehavior"
 	"google.golang.org/protobuf/proto"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, todo *service.TodoService) *http.Server {
+func NewHTTPServer(c *conf.Server, user *usersvc.UserService) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -37,6 +38,6 @@ func NewHTTPServer(c *conf.Server, todo *service.TodoService) *http.Server {
 		opts = append(opts, http.Timeout(d))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterTodoServiceHTTPServer(srv, todo)
+	userv1.RegisterUserServiceHTTPServer(srv, user)
 	return srv
 }
